Fix footer menu collapsing

--- a/resources/stylesheets/layout/_footer.scss
+++ b/resources/stylesheets/layout/_footer.scss
@@ -109,7 +109,7 @@
 }
 
 .main-footer__menu-item-container.opened + {
-  > ul {
+  ul {
     display: flex;
 
     order: 1;
